// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`userEvent.longPress with fake timers calls onLongPress if the delayLongPress is the default one 1`] = `
[
  {
    "name": "longPress",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "dispatchConfig": {
        "registrationName": "onResponderGrant",
      },
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 0,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;

exports[`userEvent.longPress with fake timers works on Pressable 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "dispatchConfig": {
        "registrationName": "onResponderGrant",
      },
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 0,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "longPress",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "dispatchConfig": {
        "registrationName": "onResponderGrant",
      },
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 0,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "dispatchConfig": {
        "registrationName": "onResponderRelease",
      },
      "isDefaultPrevented": [Function],
      "isPersistent": [Function],
      "isPropagationStopped": [Function],
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 500,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
      "timeStamp": 0,
    },
  },
]
`;
